# bicycle

./: CMakeLists.txt  LANG.md  LICENCE.md  README.md  hek.sln
hek/: ast.h  eval.cpp  eval.h  hek.cpp  hek.vcxproj  parse.h  parser.cpp  token.h  tokenizer.cpp
inc/: ast.h  eval.h  intrp_std.h  parse.h  token.h
src/: eval.cpp  intrp_std.cpp  parser.cpp  src_intrp.cpp  tokenizer.cpp  vm_intrp.cpp
src/self/: analyze.bcy  compile.bcy  emit_vm.bcy  parser.bcy  std.bcy  tokenizer.bcy
tests/: docex.bcy  minimal.bcc  modtest.bcy  print1to10.bcy
